; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_meta.c_vlc_meta_AddExtra.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_meta.c_vlc_meta_AddExtra.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@kVLCDictionaryNotFound = common dso_local global i8* null, align 8
@vlc_meta_FreeExtraKey = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_meta_AddExtra(%struct.TYPE_3__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @vlc_dictionary_value_for_key(i32* %9, i8* %10)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i8*, i8** @kVLCDictionaryNotFound, align 8
  %15 = icmp ne i8* %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %3
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* @vlc_meta_FreeExtraKey, align 4
  %21 = call i32 @vlc_dictionary_remove_value_for_key(i32* %18, i8* %19, i32 %20, i32* null)
  br label %22

22:                                               ; preds = %16, %3
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i8*, i8** %5, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @strdup(i8* %26)
  %28 = call i32 @vlc_dictionary_insert(i32* %24, i8* %25, i32 %27)
  ret void
}

declare dso_local i64 @vlc_dictionary_value_for_key(i32*, i8*) #1

declare dso_local i32 @vlc_dictionary_remove_value_for_key(i32*, i8*, i32, i32*) #1

declare dso_local i32 @vlc_dictionary_insert(i32*, i8*, i32) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
